# damper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
damper/: __init__.py  _executor.py  _wrapper.py  backoff.py  budget.py  classify.py  cost.py  prices.py  telemetry.py
examples/: 01_basic.py  02_outage_demo.py  03_telemetry.py
tests/: fakes.py  test_api_surface.py  test_backoff.py  test_budget.py  test_classify.py  test_cost.py  test_examples.py  test_executor.py  test_fakes.py  test_retry_ownership.py  test_streaming.py  test_telemetry.py  test_wrapper.py
