[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "damper"
version = "0.1.0.dev0"
description = "Budgeted, cost-aware, streaming-safe retries for Anthropic LLM calls."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Amit Kumar" }]
keywords = [
    "anthropic",
    "llm",
    "reliability",
    "retry",
    "resilience",
    "opentelemetry",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.30",
    "opentelemetry-api>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "hypothesis>=6",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["damper"]

[tool.hatch.build.targets.wheel.force-include]
"damper/py.typed" = "damper/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "damper",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["damper"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
